Adding all working Node.js code

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "earthquake-data",
+  "name": "corona-virus-data",
   "version": "1.0.0",
   "description": "K.E.N. Stack Demo",
   "main": "server.js",
